489660: Change new wrapper classes to use valueOf instead
Calling new Integer() results in the creation of a new object instance, but
the Java implementation of Integer has a cache for small valued objects that
is consulted when calling with .valueOf() instead. Replace wrapper classes
that are instantiated with an equivalent .valueOf() call instead.

Change-Id: I0fbaa103e0f53f6ee3a7669d920239f0862684db
Signed-off-by: Alex Blewitt <alex.blewitt@gmail.com>