@@ -350,7 +350,7 @@ public final class XmlMemento {
 		}
 		String strValue = attr.getValue();
 		try {
-			return new Integer(strValue);
+			return Integer.valueOf(strValue);
 		} catch (NumberFormatException e) {
 			StatusHandler.log(new Status(IStatus.ERROR, ICommonsCoreConstants.ID_PLUGIN,
 					"Memento problem - invalid integer for key: " + key //$NON-NLS-1$
